2003-04-05 12:58  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSFontPanel.m (-_initWithoutGModel): Make preview active
	by default.

2003-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/gui/NSAttributedString.h:
	* Headers/gnustep/gui/NSDocumentController.h:
	* Headers/gnustep/gui/NSGraphicsContext.h:
	* Headers/gnustep/gui/NSResponder.h:
	* Headers/gnustep/gui/NSStringDrawing.h:
	* Headers/gnustep/gui/NSTextView.h:
	* Headers/gnustep/gui/NSWindow.h:
	Fixes to allow compliation of apps with STRICT_OPENSTEP defined.
	This does *NOT* mean I've checked that STRICT_OPENSTEP is defined
	where it should be, just that I've stopped it preventing compilation.

2003-03-28  Serg Stoyan  <stoyan@on.com.ua>

	* Source/NSMenuView.m:
	(displayTransient:): Call [self sizeToFit] before caclulating locations.

2003-04-04 02:46  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView.m: Misc. cleanups.
 	(-dealloc): Remove the delegate from the notification center for
	the notifications we added it for.

2003-04-03 20:28  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager_internal.h,
	Source/GSLayoutManager.m: When stepping forward at the end of the
	glyph runs, correctly handle the case where the current run is
	extended.

2003-04-02 15:26  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSHorizontalTypesetter.m: Tweak glyph caching parameters
	to increase performance.

2003-04-01  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/NSMenuView.m (NSMenuWindowTitleView): reformatted one line to 
	conform to coding standards

	* Source/NSMenu.m: renamed ivar _changed to _needsSizing.
	([NSMenu -sizeToFit]): Changed call [_view update] to [_view sizeToFit]
	([NSMenu -displayTransient]): call [NSMenuView-update] to ensure that the 
	menuView knows it belongs to a transient menu
	([NSMenu -closeTransient]): call [NSMenuView-update] to ensue that the 
	menuView knows it is not transient anymore.
